--- a/views/pages/fleet/plane/create.ejs
+++ b/views/pages/fleet/plane/create.ejs
@@ -8,16 +8,15 @@
       <div class="form-group form-show-validation row">
         <label for="tailNumber" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">Name </label>
         <div class="col-lg-4 col-md-9 col-sm-8">
-          <input type="text" class="form-control" id="tailNumber" name="tailNumber" placeholder="Tail Number"
-            required>
+          <input type="text" class="form-control" id="tailNumber" name="tailNumber" placeholder="Tail Number" required>
         </div>
-        <div class="col-lg-4 col-md-9 col-sm-8">
+        <!-- <div class="col-lg-4 col-md-9 col-sm-8">
           <select class="form-control" id="time" name="time" required>
             <option></option>
             <option value="1A">1A</option>
             <option value="2A">2A</option>
           </select>
-        </div>
+        </div> -->
       </div>
       <div class="form-group form-show-validation row">
         <label for="aircraftType" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">Air Craft Type </label>
