Temporary hide the delete button.

--- a/views/pages/admin/customers/list.ejs
+++ b/views/pages/admin/customers/list.ejs
@@ -31,7 +31,8 @@
                 <td><%=customer.location && customer.location.name %></td>
                 <td>
                   <a href='manage/<%=customer.id%>/get'><i class="fas fa-user-edit"></i></a>
-                  <a href='#' class='rm-customer ml-3' data-id='<%=customer.id%>'><i class="fas fa-trash"></i></a>
+                  <!-- temporary commenting the code -->
+                  <!-- <a href='#' class='rm-customer ml-3' data-id='<%=customer.id%>'><i class="fas fa-trash"></i></a> -->
                 </td>
               </tr>
               <%})%>
