--- a/views/pages/admin/location/list.ejs
+++ b/views/pages/admin/location/list.ejs
@@ -26,7 +26,8 @@
               <td><%=location.phone%></td>
               <th>
                 <a href="manage/<%=location.id%>/get"><i class='fas fa-pencil-alt'></i></a>
-                <a href='#' class='rm-location ml-3' data-id='<%=location.id%>'><i class="fas fa-trash"></i></a>
+                <!-- temporary commenting the code -->
+                <!-- <a href='#' class='rm-location ml-3' data-id='<%=location.id%>'><i class="fas fa-trash"></i></a> -->
               </th>
             </tr>
             <% }) %>
