--- a/views/pages/admin/zone/list.ejs
+++ b/views/pages/admin/zone/list.ejs
@@ -22,7 +22,8 @@
               <td><%=(zone.location && zone.location.name) || '' %></td>                            
               <td>
                 <a href="manage/<%=zone.id%>/get"><i class='fas fa-pencil-alt'></i></a>
-                <a href='#' class='rm-zone ml-3' data-id='<%=zone.id%>'><i class="fas fa-trash"></i></a>
+                <!-- temporary commenting the code -->
+                <!-- <a href='#' class='rm-zone ml-3' data-id='<%=zone.id%>'><i class="fas fa-trash"></i></a> -->
               </td>
             </tr>
             <% }) %>
