--- a/views/pages/fleet/airport/list.ejs
+++ b/views/pages/fleet/airport/list.ejs
@@ -26,9 +26,10 @@
                 <td><%=airport.country%></td>
                 <td>
                   <a href="manage/<%=airport.id%>/get"><i class="fas fa-pen"></i></a>
-                  <a href="#" class="rm-airport ml-3" data-id="<%=airport.id%>"
+                  <!-- temporary commenting the code -->
+                  <!-- <a href="#" class="rm-airport ml-3" data-id="<%=airport.id%>"
                     ><i class="fas fa-trash"></i
-                  ></a>
+                  ></a> -->
                 </td>
               </tr>
               <%})%>
