--- a/views/pages/fleet/compartment/list.ejs
+++ b/views/pages/fleet/compartment/list.ejs
@@ -25,7 +25,8 @@
               <td><%=compart.weight%></td>
               <td><%=compart.volume %></td>
               <td>
-                <a class='rm-compartment' data-id='<%=compart.id%>' href="#"><i class='fa fa-trash'></i></a>
+                <!-- temporary commenting the code -->
+                <!-- <a class='rm-compartment' data-id='<%=compart.id%>' href="#"><i class='fa fa-trash'></i></a> -->
               </td>
             </tr>
             <% }) %>
