--- a/views/pages/fleet/driver/list.ejs
+++ b/views/pages/fleet/driver/list.ejs
@@ -26,7 +26,8 @@
               <td><%= driver.location%></td>
               <td>
                 <a href='manage/<%=driver.id%>/get'><i class="fas fa-user-edit px-3"></i></a>
-                <a href='#' class='rm-user' data-id='<%=driver.id%>'><i class="fas fa-trash px-3"></i></a>
+                <!-- temporary commenting the code -->
+                <!-- <a href='#' class='rm-user' data-id='<%=driver.id%>'><i class="fas fa-trash px-3"></i></a> -->
               </td>
             </tr>
             <% }) %>
