--- a/views/pages/fleet/pilot/list.ejs
+++ b/views/pages/fleet/pilot/list.ejs
@@ -28,8 +28,9 @@
               <!-- <td><%= pilot.warehouse%></td> -->
               <td>
                 <a href='manage/<%=pilot.id%>/get'><i class="fas fa-user-edit"></i></a>
-                <a href="#" class='rm-pilot ml-3' data-id='<%=pilot.id%>' data-toggle='modal' data-target='#confirmDel'>
-                  <i class="fas fa-trash"></i></a>
+                <!-- temporary commenting the code -->
+                <!-- <a href="#" class='rm-pilot ml-3' data-id='<%=pilot.id%>' data-toggle='modal' data-target='#confirmDel'>
+                  <i class="fas fa-trash"></i></a> -->
               </td>
             </tr>
             <% }) %>
