--- a/views/pages/warehouse/carrier/list.ejs
+++ b/views/pages/warehouse/carrier/list.ejs
@@ -39,7 +39,8 @@
                 <!-- <td><%=carrier.zipcode %></td> -->
                 <td>
                   <a href='manage/<%=carrier.id%>/get'><i class="fas fa-pen"></i></a>
-                  <a href='#' class='rm-carrier ml-3' data-id='<%=carrier.id%>'><i class="fas fa-trash"></i></a>
+                  <!-- temporary commenting the code -->
+                  <!-- <a href='#' class='rm-carrier ml-3' data-id='<%=carrier.id%>'><i class="fas fa-trash"></i></a> -->
                 </td>
               </tr>
               <%})%>
