--- a/views/pages/warehouse/container/list.ejs
+++ b/views/pages/warehouse/container/list.ejs
@@ -33,9 +33,10 @@
                 <td><%=container.seal%></td>
                 <td>
                   <a href="manage/<%=container.id%>/get"><i class="fas fa-pen"></i></a>
-                  <a href="#" class="rm-container ml-3" data-id="<%=container.id%>"
+                  <!-- temporary commenting the code -->
+                  <!-- <a href="#" class="rm-container ml-3" data-id="<%=container.id%>"
                     ><i class="fas fa-trash"></i
-                  ></a>
+                  ></a> -->
                 </td>
               </tr>
               <%})%>
