--- a/views/pages/warehouse/hazmat/list.ejs
+++ b/views/pages/warehouse/hazmat/list.ejs
@@ -27,7 +27,8 @@
                 <td>
                   <a href='#' data-id='<%=hazmat.id%>' data-target="#edit-hazmat" data-toggle='modal'
                     class='btn-edit-hazmat mx-3'><i class="fas fa-pen"></i></a>
-                  <a href='#' class='rm-hazmat ml-3' data-id='<%=hazmat.id%>'><i class="fas fa-trash"></i></a>
+                  <!-- temporary commenting the code -->
+                  <!-- <a href='#' class='rm-hazmat ml-3' data-id='<%=hazmat.id%>'><i class="fas fa-trash"></i></a> -->
                 </td>
               </tr>
               <%})%>
