--- a/views/pages/warehouse/paid-type/list.ejs
+++ b/views/pages/warehouse/paid-type/list.ejs
@@ -23,7 +23,8 @@
                 <td><strong><%=paidType.name%></strong></td>
                 <td>
                   <a href='manage/<%=paidType.id%>/get'><i class="fas fa-pen"></i></a>
-                  <a href='#' class='rm-paid-type ml-3' data-id='<%=paidType.id%>'><i class="fas fa-trash"></i></a>
+                  <!-- temporary commenting the code -->
+                  <!-- <a href='#' class='rm-paid-type ml-3' data-id='<%=paidType.id%>'><i class="fas fa-trash"></i></a> -->
                 </td>
               </tr>
               <%})%>
