--- a/views/pages/warehouse/airline/list.ejs
+++ b/views/pages/warehouse/airline/list.ejs
@@ -24,7 +24,8 @@
                 <td><%=helpers.getFullName(airline)%></td>
                 <td>
                   <a href='manage/<%=airline.id%>/get'><i class="fas fa-pen"></i></a>
-                  <a href='#' class='rm-airline ml-3' data-id='<%=airline.id%>'><i class="fas fa-trash"></i></a>
+                  <!-- temporary commenting the code -->
+                  <!-- <a href='#' class='rm-airline ml-3' data-id='<%=airline.id%>'><i class="fas fa-trash"></i></a> -->
                 </td>
               </tr>
               <%})%>
