--- a/views/pages/warehouse/awb/no-docs.ejs
+++ b/views/pages/warehouse/awb/no-docs.ejs
@@ -37,8 +37,9 @@
               <td class="text-center">
                 <a href='manage/<%=awb._id%>/get' class="btn btn-link btn-primary p-1" data-toggle="tooltip"
                   data-original-title="Edit"> <i class="fa fa-pencil-alt"></i> </a>
-                <a class="btn btn-link btn-danger btn-rm-awb p-1" data-toggle="modal" data-id="<%=awb._id%>"
-                  data-target="#confirm-delete-awb"> <i class="fa fa-trash"></i> </a>
+                <!-- temporary commenting the code -->
+                <!-- <a class="btn btn-link btn-danger btn-rm-awb p-1" data-toggle="modal" data-id="<%=awb._id%>"
+                  data-target="#confirm-delete-awb"> <i class="fa fa-trash"></i> </a> -->
                 <a class="btn btn-link btn-primary btn-print-awb p-1" data-toggle="modal" data-id="<%=awb._id%>"
                   data-target="#print-popup"> <i class="fa fa-print"></i> </a>
               </td>
