--- a/views/pages/warehouse/service-type/list.ejs
+++ b/views/pages/warehouse/service-type/list.ejs
@@ -24,7 +24,8 @@
                 <td><%=serviceType.amount%></td>
                 <td>
                   <a href='manage/<%=serviceType.id%>/get'><i class="fas fa-pen"></i></a>
-                  <a href='#' class='rm-service-type ml-3' data-id='<%=serviceType.id%>'><i class="fas fa-trash"></i></a>
+                  <!-- temporary commenting the code -->
+                  <!-- <a href='#' class='rm-service-type ml-3' data-id='<%=serviceType.id%>'><i class="fas fa-trash"></i></a> -->
                 </td>
               </tr>
               <%})%>
