--- a/views/pages/warehouse/shipper/list.ejs
+++ b/views/pages/warehouse/shipper/list.ejs
@@ -38,7 +38,8 @@
                 <!-- <td><%=shipper.zipcode %></td> -->
                 <td>
                   <a href='manage/<%=shipper.id%>/get'><i class="fas fa-pen"></i></a>
-                  <a href='#' class='rm-shipper ml-3' data-id='<%=shipper.id%>'><i class="fas fa-trash"></i></a>
+                  <!-- temporary commenting the code -->
+                  <!-- <a href='#' class='rm-shipper ml-3' data-id='<%=shipper.id%>'><i class="fas fa-trash"></i></a> -->
                 </td>
               </tr>
               <%})%>
