--- a/views/shared/__sidebar.ejs
+++ b/views/shared/__sidebar.ejs
@@ -24,7 +24,7 @@
 				</li>
 				<li class="nav-item <% if (page.includes('/report/')) { %> active <% } %>">
 					<a href="/report">
-						<i class="fa fa-map-marker-alt"></i>
+						<i class="fa fa-file"></i>
 						<p>Reports </p>
 					</a>
 				</li>
