--- a/views/pages/admin/customers/create.ejs
+++ b/views/pages/admin/customers/create.ejs
@@ -12,13 +12,24 @@
               <div class="form-group form-show-validation row">
                 <label for="company" class="col-lg-4 col-md-4 col-sm-4 mt-sm-2 text-right">Company </label>
                 <div class="col-lg-8 col-md-8 col-sm-8">
-                  <input type="text" class="form-control" id="company" name="company" placeholder="Company Name">
+                  <select id="company" name="company" class="form-control" required>
+                    <% companies.forEach(company => { %>
+                      <option value="<%= company._id%>"> <%= company.name %>
+                      </option>
+                      <% }) %>
+                  </select>
                 </div>
               </div>
               <div class="form-group form-show-validation row">
                 <label for="pmb" class="col-lg-4 col-md-4 col-sm-4 mt-sm-2 text-right">PMB </label>
                 <div class="col-lg-8 col-md-8 col-sm-8">
                   <input type="number" class="form-control" id="pmb" name="pmb" placeholder="PMB" value="9000">
+                </div>
+              </div>
+              <div class="form-group form-show-validation row">
+                <label for="placeOfWork" class="col-lg-4 col-md-4 col-sm-4 mt-sm-2 text-right">Place Of Work </label>
+                <div class="col-lg-8 col-md-8 col-sm-8">
+                  <input type="text" class="form-control" id="placeOfWork" name="placeOfWork" placeholder="Place Of Work">
                 </div>
               </div>
               <div class="form-group form-show-validation row">
