--- a/views/pages/warehouse/cube/list.ejs
+++ b/views/pages/warehouse/cube/list.ejs
@@ -12,7 +12,9 @@
               <tr>
                 <th>ID</th>
                 <th>Name</th>
-                <th>Packages</th>                
+                <th>AWB No</th>
+                <th>Created At</th>
+                <th>Detail</th>                
                 
               </tr>
             </thead>
@@ -21,7 +23,11 @@
               <tr data-record="<%= cube.id %>">
                 <td><%=cube.id%></td>
                 <td><strong><%=cube.name%></strong></td> 
-                <td><a href="" data-id='<%=cube.id%>' data-target="#package-cube" data-toggle='modal' class="package-detail" onclick="cubePackaceDetail('<%=cube._id%>')"><i class="fas fa-eye"></i></a></td>              
+                <td><%=cube.awbId%></td> 
+                <td><%=helpers.formatDate(cube.createdAt)%></td> 
+                <!--<td><a href="/warehouse/cube/detail/<%=cube.id%>" data-id='<%=cube.id%>' data-target="#package-cube" data-toggle='modal' class="package-detail" onclick="cubePackaceDetail('<%=cube._id%>')"><i class="fas fa-eye"></i></a></td>              
+                -->
+                <td><a href="/warehouse/cube/detail/<%=cube.id%>" ><i class="fas fa-eye"></i></a></td>              
                 
               </tr>
               <%})%>
