--- a/views/pages/warehouse/package/list-all.ejs
+++ b/views/pages/warehouse/package/list-all.ejs
@@ -48,6 +48,7 @@
           <thead>
             <tr>
               <th></th>
+              <th>Customer Name</th>
               <th>Tracking No</th>
               <th>Description</th>
               <th>Type</th>
@@ -64,6 +65,14 @@
               <td>
                 <input type="checkbox" class="package-select" />
               </td>
+              <% if (pkg['customerId']) { %>
+                <td><%= (pkg['customerId'].lastName ? 
+                  `${pkg['customerId'].firstName} ${pkg['customerId'].lastName}` : 
+                  `${pkg['customerId'].firstName}`); %>
+                </td>
+              <% } else { %>
+                <td> - </td>
+              <% } %>
               <td><%= pkg.trackingNo%></td>
               <td><%= pkg.description %></td>
               <td><%= pkg.packageType %></td>
