--- a/views/pages/warehouse/package/list-all.ejs
+++ b/views/pages/warehouse/package/list-all.ejs
@@ -51,6 +51,7 @@
               <th>Customer Name</th>
               <th>Tracking No</th>
               <th>Description</th>
+              <th>Zone</th>
               <th>Type</th>
               <th>Weight</th>
               <th>Status</th>
@@ -75,10 +76,16 @@
               <% } %>
               <td><%= pkg.trackingNo%></td>
               <td><%= pkg.description %></td>
+              <% if (pkg['zoneId'] && pkg['zoneId'].name) { %>
+                <td><%= pkg['zoneId'].name %>
+                </td>
+              <% } else { %>
+                <td> - </td>
+              <% } %> 
               <td><%= pkg.packageType %></td>
               <td><%= pkg.weight%></td>
               <td class="lastStatusText_field"><%= pkg.lastStatusText %></td>
-              <td><%= pkg.awbId.awbId %></td>
+              <td><a href="../../nas/awb/manage/<%=pkg.awbId._id%>/preview"> <%= pkg.awbId.awbId %> </a></td>
               <td><a href="../pkg-label/download/<%=pkg._id%>"><i class="fa fa-download"></i></a></td>
               <td>
                 <a
