--- a/views/pages/warehouse/package/list.ejs
+++ b/views/pages/warehouse/package/list.ejs
@@ -14,6 +14,7 @@
                 <th>Customer Name</th>
                 <th>Tracking No</th>
                 <th>Description</th>
+                <th>Zone</th>
                 <th>Type</th>
                 <th>Weight</th>
                 <th>Status</th>
@@ -41,10 +42,16 @@
                 <% } %> 
                 <td><%= pkg.trackingNo%></td>
                 <td><%= pkg.description %></td>
+                <% if (pkg['zoneId'] && pkg['zoneId'].name) { %>
+                  <td><%= pkg['zoneId'].name %>
+                  </td>
+                <% } else { %>
+                  <td> - </td>
+                <% } %> 
                 <td><%= pkg.packageType %></td>
                 <td><%= pkg.weight%></td>
                 <td><%= pkg.lastStatusText %></td>
-                <td><%= pkg.awbId.awbId %></td>
+                <td> <a href="../../nas/awb/manage/<%=pkg.awbId._id%>/preview"> <%= pkg.awbId.awbId %> </a></td>
                 <% if (typeof filterURL !== 'undefined' && filterURL === 'not-pmb9000') { %>
                   <td><%= pkg.location %></td>
                 <% } %>
