--- a/views/pages/warehouse/price/list-all.ejs
+++ b/views/pages/warehouse/price/list-all.ejs
@@ -27,8 +27,10 @@
           <thead>
             <tr>
               <th></th>
+              <th>Customer Name</th>
               <th>Tracking No</th>
               <th>Description</th>
+              <th>Zone</th>
               <th>Type</th>
               <th>Weight</th>
               <th>Status</th>
@@ -44,12 +46,26 @@
               <td>
                 <input type="checkbox" class="package-select" />
               </td>
+              <% if (pkg['customerId']) { %>
+                <td><%= (pkg['customerId'].lastName ? 
+                  `${pkg['customerId'].firstName} ${pkg['customerId'].lastName}` : 
+                  `${pkg['customerId'].firstName}`); %>
+                </td>
+              <% } else { %>
+                <td> - </td>
+              <% } %> 
               <td><%= pkg.trackingNo%></td>
               <td><%= pkg.description %></td>
+              <% if (pkg['zoneId'] && pkg['zoneId'].name) { %>
+                <td><%= pkg['zoneId'].name %>
+                </td>
+              <% } else { %>
+                <td> - </td>
+              <% } %> 
               <td><%= pkg.packageType %></td>
               <td><%= pkg.weight%></td>
               <td class="lastStatusText_field"><%= pkg.lastStatusText %></td>
-              <td><%= pkg.awbId.awbId %></td>
+              <td><a href="../../warehouse/nas/awb/manage/<%=pkg.awbId._id%>/preview"> <%= pkg.awbId.awbId %> </a></td>
               <td><a class="btn btn-link btn-primary btn-edit-pricelabel" data-toggle="modal" data-id="<%=pkg._id%>"
                   data-original-title="Add Price" data-target="#pricelabel-popup"><i class="fa fa-edit"></i></a>
               </td>
