--- a/views/pages/warehouse/package/list.ejs
+++ b/views/pages/warehouse/package/list.ejs
@@ -51,7 +51,7 @@
                 <td><%= pkg.packageType %></td>
                 <td><%= pkg.weight%></td>
                 <td><%= pkg.lastStatusText %></td>
-                <td> <a href="../../nas/awb/manage/<%=pkg.awbId._id%>/preview"> <%= pkg.awbId.awbId %> </a></td>
+                <td> <a href="../awb/manage/<%=pkg.awbId._id%>/preview"> <%= pkg.awbId.awbId %> </a></td>
                 <% if (typeof filterURL !== 'undefined' && filterURL === 'not-pmb9000') { %>
                   <td><%= pkg.location %></td>
                 <% } %>
