--- a/views/pages/warehouse/awb/no-docs.ejs
+++ b/views/pages/warehouse/awb/no-docs.ejs
@@ -6,7 +6,7 @@
         <h4 class="card-title"><%=title%></h4>
       </div>
       <div class="card-body">
-        <table id='no-docs-table' class='display table table-striped table-hover dataTable'>
+        <table id='no-docs-table' class='display table-responsive table table-striped table-hover dataTable'>
           <thead>
             <tr>
               <th>Customer Name</th>
@@ -37,14 +37,17 @@
               <td><%=awb.carrier.name %></td>
               <td><%=awb.packages.length %></td>
               <td><%=awb.weight %></td>
-              <td class="text-center">
-                <a href='manage/<%=awb._id%>/get' class="btn btn-link btn-primary p-1" data-toggle="tooltip"
-                  data-original-title="Edit"> <i class="fa fa-pencil-alt"></i> </a>
+              <td>
+                <!-- <a href='manage/<%=awb._id%>/get' class="btn btn-link btn-primary p-1" data-toggle="tooltip"
+                  data-original-title="Edit"> <i class="fa fa-pencil-alt"></i> </a> -->
                 <!-- temporary commenting the code -->
                 <!-- <a class="btn btn-link btn-danger btn-rm-awb p-1" data-toggle="modal" data-id="<%=awb._id%>"
                   data-target="#confirm-delete-awb"> <i class="fa fa-trash"></i> </a> -->
-                <a class="btn btn-link btn-primary btn-print-awb p-1" data-toggle="modal" data-id="<%=awb._id%>"
-                  data-target="#print-popup"> <i class="fa fa-print"></i> </a>
+                <a 
+                class="btn btn-link btn-primary btn-print-awb" 
+                data-toggle="modal" 
+                data-id="<%=awb._id%>"
+                data-target="#print-popup"><i class="fa fa-print"></i> </a>
               </td>
             </tr>
             <% }}) %>
