--- a/views/pages/warehouse/delivery/preview.ejs
+++ b/views/pages/warehouse/delivery/preview.ejs
@@ -15,6 +15,11 @@
       </div>
       <div class="card-body">
         <h3 class="card-title text-muted">Delivery Info</h3>
+        <div class="d-flex flex-row">
+          <div class="p-2"><b>Date</b> :- <%= delivery.delivery_date%></div>
+          <div class="p-2"><b>Destination</b> :- <%= delivery.locationId.name%></div>
+          <div class="p-2"><b>Driver</b> :- <%= delivery.driverId.firstName + ' ' + delivery.driverId.lastName%></div>
+        </div>
         <div class="separator-solid"></div>
         <h3 class="card-title text-muted">Packages</h3>
         <div class="mt-3">
@@ -35,7 +40,7 @@
                 <td><%= package.id %></td>
                 <td><%= package.customer && package.customer.pmb %></td>
                 <td><%= helpers.getFullName(package.customer) %></td>
-                <td><%= package.awbId %></td>
+                <td><%= package.awbId.awbId %></td>
                 <td><%= helpers.getFullName(package.shipper) %></td>
                 <td><%= package.weight %> lbs</td>
               </tr>
