--- a/views/pages/warehouse/package/list-all.ejs
+++ b/views/pages/warehouse/package/list-all.ejs
@@ -57,7 +57,7 @@
               <th>Status</th>
               <th>AWB</th>
               <th></th>
-              <th></th>
+              <!-- <th></th> -->
             </tr>
           </thead>  
           <tbody>
@@ -86,8 +86,9 @@
               <td><%= pkg.weight%></td>
               <td class="lastStatusText_field"><%= pkg.lastStatusText %></td>
               <td><a href="../../nas/awb/manage/<%=pkg.awbId._id%>/preview"> <%= pkg.awbId.awbId %> </a></td>
-              <td><a href="../pkg-label/download/<%=pkg._id%>"><i class="fa fa-download"></i></a></td>
-              <td>
+              <!-- <td><a href="../pkg-label/download/<%=pkg._id%>"><i class="fa fa-download"></i></a></td> -->
+              <td class="text-center">
+                <a href="../pkg-label/download/<%=pkg._id%>"><i class="fa fa-download"></i></a>
                 <a
                   class="btn btn-link btn-primary btn-print-pkg"
                   data-toggle="modal"
