--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -355,7 +355,7 @@
     $("#9to5packages tbody").html("")
     $("#9to5packages tbody").append(result)
     if (!($.fn.dataTable.isDataTable('#9to5packages'))) {
-      $("#9to5packages").DataTable({ searching: false, "bLengthChange": false });
+      $("#9to5packages").DataTable({ searching: false, "bLengthChange": false, "order": [[ 2, "desc" ]] });
     }
   }
 
@@ -372,7 +372,7 @@
 
     $("#no_docs_packages tbody").append(result)
     if (!($.fn.dataTable.isDataTable('#no_docs_packages'))) {
-      $("#no_docs_packages").DataTable({ searching: false, "bLengthChange": false });
+      $("#no_docs_packages").DataTable({ searching: false, "bLengthChange": false, "order": [[ 2, "desc" ]] });
     }
   }
 
@@ -389,7 +389,7 @@
 
     $("#post_packages tbody").append(result)
     if (!($.fn.dataTable.isDataTable('#post_packages'))) {
-      $("#post_packages").DataTable({ searching: false, "bLengthChange": false });
+      $("#post_packages").DataTable({ searching: false, "bLengthChange": false, "order": [[ 2, "desc" ]] });
     }
   }
 
