--- a/views/pages/warehouse/awb/create.ejs
+++ b/views/pages/warehouse/awb/create.ejs
@@ -82,7 +82,7 @@
                 <label for="awb-deliveryMethod" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">Delivery or
                   Pickup</label>
                 <div class="col-lg-8 col-md-8 col-sm-8">
-                  <select id="awb-deliveryMethod" name="deliveryMethod" class='form-control' data-placeholder="Select">
+                  <select id="awb-deliveryMethod" name="deliveryMethod" class='form-control awb-deliveryMethod' data-placeholder="Select">
                     <% [{ label: 'Delivery', value: '1' }, { label: 'Pickup', value: '2' }].forEach(option => { %>
                     <option value="<%=option.value%>"
                       <% if(typeof awb !== 'undefined' && awb.deliveryMethod == option.value) { %> selected <% } %>>
@@ -91,7 +91,7 @@
                   </select>
                 </div>
               </div>
-              <div class="form-group form-show-validation row">
+              <div class="form-group form-show-validation row hideDriver">
                 <label for="driver" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">Driver</label>
                 <div class="col-lg-8 col-md-8 col-sm-8">
                   <select id="driver" name="driver" class='form-control' style='width:90%;'>
@@ -244,19 +244,19 @@
         <input type='number' class='form-control' id='weight' name='weight' step="0.01" required />
       </div>
       <div class='form-group'>
-        <label for="packageType">Package calculation</label>
-        <select class='form-control' id='packageCalculation' name="packageCalculation" required>
+        <label for="packageCalculation">Package calculation</label>
+        <select class='form-control packageCalculation' id='packageCalculation' name="packageCalculation" required>
           <option></option>          
-          <option selected>lbs</option>
-          <option>Kg</option>                    
+          <option value="lbs" selected>lbs</option>
+          <option value="kg">Kg</option>                    
         </select>
       </div>
       
       <div class='form-group'>
         <label for="packageType">Package Type</label>
-        <select class='form-control' id='packageType' name="packageType" required>
+        <select class='form-control packageType' id='packageType' name="packageType" required>
           <option></option>
-          <option>BOX</option>
+          <option value="BOX" selected>BOX</option>
           <option>BAG</option>
           <option>Envelope</option>
           <option>Pallet</option>
