--- a/views/pages/warehouse/awb/edit.ejs
+++ b/views/pages/warehouse/awb/edit.ejs
@@ -85,7 +85,7 @@
                 <label for="awb-deliveryMethod" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">Delivery or
                   Pickup</label>
                 <div class="col-lg-8 col-md-8 col-sm-8">
-                  <select id="awb-deliveryMethod" name="deliveryMethod" class='form-control' data-placeholder="Select">
+                  <select id="awb-deliveryMethod" name="deliveryMethod" class='form-control awb-deliveryMethod' data-placeholder="Select">
                     <% [{ label: 'Delivery', value: '1' }, { label: 'Pickup', value: '2' }].forEach(option => { %>
                     <option value="<%=option.value%>"
                       <% if(typeof awb !== 'undefined' && awb.deliveryMethod == option.value) { %> selected <% } %>>
@@ -94,7 +94,7 @@
                   </select>
                 </div>
               </div>
-              <div class="form-group form-show-validation row">
+              <div class="form-group form-show-validation row hideDriver">
                 <label for="driver" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">Driver</label>
                 <div class="col-lg-8 col-md-8 col-sm-8">
                   <select id="driver" name="driver" class='form-control' style='width:90%;' required>
@@ -276,27 +276,28 @@
         <input type='number' class='form-control' id='weight' name='weight' step="0.01" required />
       </div>
       <div class='form-group'>
-        <label for="packageType">Package calculation</label>
-        <select class='form-control' id='packageCalculation' name="packageCalculation" required>
-          <option></option> 
-          <option selected="selected">lbs</option>
-          <option>kg</option>         
+        <label for="packageCalculation">Package calculation</label>
+        <select class='form-control packageCalculation' id='packageCalculation' name="packageCalculation" required>
+          <option></option>          
+          <option value="lbs" selected>lbs</option>
+          <option value="kg">Kg</option>                    
         </select>
       </div>
+      
       <div class='form-group'>
         <label for="packageType">Package Type</label>
-        <select class='form-control' id='packageType' name="packageType" required>
+        <select class='form-control packageType' id='packageType' name="packageType" required>
           <option></option>
-          <option value="BOX">BOX</option>
-          <option value="BAG">BAG</option>
-          <option value="Envelope">Envelope</option>
-          <option value="Pallet">Pallet</option>
-          <option value="Suitcase">Suitcase</option>
-          <option value="Can">Can</option>
-          <option value="Shrink Wrapped Box">Shrink Wrapped Box</option>
-          <option value="Shrink Wrapped Pallet">Shrink Wrapped Pallet</option>
-          <option value="Cooler">Cooler</option>
-          <option value="Other">Other</option>
+          <option value="BOX" selected>BOX</option>
+          <option>BAG</option>
+          <option>Envelope</option>
+          <option>Pallet</option>
+          <option>Suitcase</option>
+          <option>Can</option>
+          <option>Shrink Wrapped Box</option>
+          <option>Shrink Wrapped Pallet</option>
+          <option>Cooler</option>
+          <option>Other</option>
         </select>
       </div>
       <div class='form-group'>
