--- a/views/pages/warehouse/package/list-all.ejs
+++ b/views/pages/warehouse/package/list-all.ejs
@@ -49,13 +49,13 @@
             <tr>
               <th></th>
               <th>Customer Name</th>
-              <th>Tracking No</th>
+              <th>AWB</th>
+              <th>Original Tracking No</th>
               <th>Description</th>
               <th>Zone</th>
               <th>Type</th>
               <th>Weight</th>
               <th>Status</th>
-              <th>AWB</th>
               <th></th>
               <!-- <th></th> -->
             </tr>
@@ -71,10 +71,11 @@
                   `${pkg['customerId'].firstName} ${pkg['customerId'].lastName}` : 
                   `${pkg['customerId'].firstName}`); %>
                 </td>
-              <% } else { %>
-                <td> - </td>
-              <% } %>
-              <td><%= pkg.trackingNo%></td>
+                <% } else { %>
+                  <td> - </td>
+                  <% } %>
+              <td><a href="../../nas/awb/manage/<%=pkg.awbId._id%>/preview"> <%= pkg.awbId.awbId %> </a></td>
+              <td><%= pkg.originBarcode ? pkg.originBarcode.barcode: ''%></td>
               <td><%= pkg.description %></td>
               <% if (pkg['zoneId'] && pkg['zoneId'].name) { %>
                 <td><%= pkg['zoneId'].name %>
@@ -85,7 +86,6 @@
               <td><%= pkg.packageType %></td>
               <td><%= pkg.weight%></td>
               <td class="lastStatusText_field"><%= pkg.lastStatusText %></td>
-              <td><a href="../../nas/awb/manage/<%=pkg.awbId._id%>/preview"> <%= pkg.awbId.awbId %> </a></td>
               <!-- <td><a href="../pkg-label/download/<%=pkg._id%>"><i class="fa fa-download"></i></a></td> -->
               <td class="text-center">
                 <a href="../pkg-label/download/<%=pkg._id%>"><i class="fa fa-download"></i></a>
