--- a/views/pages/warehouse/package/list-all.ejs
+++ b/views/pages/warehouse/package/list-all.ejs
@@ -47,7 +47,7 @@
         <table id = "package-table" class="display table table-responsive table-striped table-hover dataTable package-table">
           <thead>
             <tr>
-              <th></th>
+              <th><input id="checkall" type="checkbox" class="package-select-all" /></th>
               <th>Customer Name</th>
               <th>Tracking No</th>
               <th>Description</th>
@@ -64,7 +64,7 @@
             <% packages.forEach(function(pkg){ %>
             <tr data-record="<%= pkg._id %>">
               <td>
-                <input type="checkbox" class="package-select" />
+                <input type="checkbox" name="package-select" class="package-select" />
               </td>
               <% if (pkg['customerId']) { %>
                 <td><%= (pkg['customerId'].lastName ? 
