--- a/views/pages/warehouse/cube/list.ejs
+++ b/views/pages/warehouse/cube/list.ejs
@@ -15,7 +15,7 @@
                 <th>AWB No</th>
                 <th>Created At</th>
                 <th>Detail</th>                
-                
+                <th></th>
               </tr>
             </thead>
             <tbody>
@@ -28,7 +28,17 @@
                 <!--<td><a href="/warehouse/cube/detail/<%=cube.id%>" data-id='<%=cube.id%>' data-target="#package-cube" data-toggle='modal' class="package-detail" onclick="cubePackaceDetail('<%=cube._id%>')"><i class="fas fa-eye"></i></a></td>              
                 -->
                 <td><a href="/warehouse/cube/detail/<%=cube.id%>" ><i class="fas fa-eye"></i></a></td>              
-                
+                <td class="text-center">
+                  <a href="/api/printer/download-pdf/cube/<%=cube.id%>"><i class="fa fa-download"></i></a>
+                  <a
+                    class="btn btn-link btn-primary btn-print-pkg"
+                    data-toggle="modal"
+                    data-id="<%=cube.id%>"
+                    data-original-title="Print Label"
+                    data-target="#print-popup"
+                  ><i class="fa fa-print"></i>
+                </a>
+                </td>
               </tr>
               <%})%>
             </tbody>
@@ -113,6 +123,38 @@
         </tbody>
       </table>
 
+    </div>
+  </div>
+</div>
+
+<div
+  class="modal fade"
+  id="print-popup"
+  tabindex="-1"
+  role="dialog"
+  aria-labelledby="print-popup"
+  aria-hidden="true"
+  style="display: none;"
+>
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h2 class="modal-title" id="exampleModalLabel2">Print Cube Label</h2>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">×</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <div class="form-group text-center">
+          <canvas id="pdf-preview" class="border border-dark"></canvas>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-danger close-del" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary print-package" id="print-package">
+          Print
+        </button>
+      </div>
     </div>
   </div>
 </div>
