--- a/views/shared/__sidebar.ejs
+++ b/views/shared/__sidebar.ejs
@@ -274,7 +274,7 @@
 				</li>
 				<li class="nav-item <% if (page.includes('/cube/')) { %> active <% } %>">
 					<a href="/warehouse/cube/list">
-						<i class="fa fa-exclamation-triangle"></i>
+						<i class="fa fa-sitemap"></i>
 						<p>Cube </p>
 					</a>
 				</li>
