--- a/views/pages/warehouse/shipper/create.ejs
+++ b/views/pages/warehouse/shipper/create.ejs
@@ -56,7 +56,12 @@
           <div class="form-group form-show-validation row">
             <label for="country" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">Country</label>
             <div class="col-lg-4 col-md-9 col-sm-8">
-              <input type="text" class="form-control" id='country' name="country" placeholder="Country">
+              <select id="country" name="country" class=" form-control " required>
+                <% countries.forEach(country => { %>
+                  <option value="<%= country.name%>"> <%= country.name %>
+                  </option>
+                  <% }) %>
+              </select>
             </div>
           </div>
           <div class="form-group form-show-validation row">
