--- a/views/pages/warehouse/shipper/edit.ejs
+++ b/views/pages/warehouse/shipper/edit.ejs
@@ -64,8 +64,12 @@
           <div class="form-group form-show-validation row">
             <label for="country" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">Country</label>
             <div class="col-lg-4 col-md-9 col-sm-8">
-              <input type="text" class="form-control" id='country' name="country" placeholder="Country"
-                value="<%=shipper.country%>">
+              <select id="country" name="country" class=" form-control ">
+                <% countries.forEach(country => { %>
+                  <option value="<%= country.name%>" <% if(country.name.toString()==shipper.country.toString()) { %> selected <% } %>> <%= country.name %>
+                  </option>
+                  <% }) %>
+              </select>
             </div>
           </div>
           <div class="form-group form-show-validation row">
