--- a/views/pages/warehouse/cube/list.ejs
+++ b/views/pages/warehouse/cube/list.ejs
@@ -6,7 +6,7 @@
         <div class="card-title"><%=title%></div>
         <button class="btn btn-primary btn-add-cube2 btn-round float-right ml-md-auto"
           data-toggle="modal"
-          data-original-title="Add Cube2"
+          data-original-title="Add Cube"
           data-target="#addCube2-popup"
         >Add Cube2</button>        
       </div>
