--- a/views/pages/warehouse/cube/detail.ejs
+++ b/views/pages/warehouse/cube/detail.ejs
@@ -46,7 +46,7 @@
                   <td><strong>AWB No</strong></td>
                   <td><strong>Customer Name</strong></td>
                   <td><strong>Shipper Name</strong></td>
-                  <td><strong>Trackig No #</strong></td>
+                  <td><strong>Original Bar Code</strong></td>
                   <td><strong>Description</strong></td>
                   <td><strong>Weight</strong></td>
                   <td><strong>Dimension</strong></td>
@@ -57,8 +57,8 @@
                 <tr data-record="<%= package.id %>">
                   <td><%= package.awbId && package.awbId.awbId %></td>
                   <td><%= package.customerId && (package.customerId.firstName +" "+ package.customerId.lastName)%></td>
-                  <td><%= package.shipperId && (package.shipperId.firstName +" "+ package.shipperId.lastName) %></td>
-                  <td><%= package.trackingNo %></td>
+                  <td><%= package.shipperId && package.shipperId.name %></td>
+                  <td><%= package.originBarcode ? package.originBarcode.barcode : '' %></td>
                   <td><%= package.description %></td>
                   <td><%= package.weight %> lbs</td>
                   <td><%= package.dimensions %></td>
