--- a/views/pages/warehouse/cube/list.ejs
+++ b/views/pages/warehouse/cube/list.ejs
@@ -26,7 +26,7 @@
             <tbody>
               <% cubes.forEach(function(cube){ %>
               <tr data-record="<%= cube.id %>">
-                <td><%=cube.id%></td>
+                <td><%= cube.id %></td>
                 <td><strong><%=cube.name%></strong></td> 
                 <% let cube2link = cube.cubeAwbId ? cube.cubeAwbId.id : ''
                 if(cube2link == '') cube2link = '#' 
@@ -36,9 +36,15 @@
                 <td><%=helpers.formatDate(cube.createdAt)%></td> 
                 <!--<td><a href="/warehouse/cube/detail/<%=cube.id%>" data-id='<%=cube.id%>' data-target="#package-cube" data-toggle='modal' class="package-detail" onclick="cubePackaceDetail('<%=cube._id%>')"><i class="fas fa-eye"></i></a></td>              
                 -->
-                <td><a href="/warehouse/cube/detail/<%=cube.id%>" ><i class="fas fa-eye"></i></a></td>              
+                <% console.log("EE",cube) %>
+                <% let downloadpdfLink = (cube.packages.length ? cube.id : '')
+                  if(downloadpdfLink == '') downloadpdfLink = '#' 
+                  else downloadpdfLink = '/warehouse/cube/detail/'+ downloadpdfLink
+                %>
+                <td><a href="/warehouse/cube/detail/<%=cube.id%>" ><i class="fas fa-eye"></i></a></td>
+                
                 <td class="text-center">
-                  <a href="/api/printer/download-pdf/cube/<%=cube.id%>"><i class="fa fa-download"></i></a>
+                  <a href="<%=downloadpdfLink%>"><i class="fa fa-download"></i></a>
                   <a
                     class="btn btn-link btn-primary btn-print-pkg"
                     data-toggle="modal"
