--- a/views/shared/__sidebar.ejs
+++ b/views/shared/__sidebar.ejs
@@ -165,6 +165,11 @@
 									<span class="sub-item">Deliveries</span>
 								</a>
 							</li>
+							<li <% if (page.includes('/fll/manifest/list')) { %> class="active" <% } %>>
+								<a href="/warehouse/fll/manifest/list">
+									<span class="sub-item">Manifests</span>
+								</a>
+							</li>
 						</ul>
 					</div>
 				</li>
