--- a/views/pages/warehouse/awb/create.ejs
+++ b/views/pages/warehouse/awb/create.ejs
@@ -251,6 +251,12 @@
           <option value="kg">Kg</option>                    
         </select>
       </div>
+      <div class='form-group'>
+        <div class="custom-control custom-checkbox">
+        <input type="checkbox" class="custom-control-input" name="express" id="express">
+        <label class="custom-control-label" for="express">Express </label>
+        </div>
+      </div>
       
       <div class='form-group'>
         <label for="packageType">Package Type</label>
