invoice, pickup,express

--- a/views/pages/warehouse/awb/create.ejs
+++ b/views/pages/warehouse/awb/create.ejs
@@ -102,6 +102,24 @@
                   </select>
                 </div>
               </div>
+              <div class="form-group form-show-validation row ">
+                <div class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right"></div>
+                <div class="col-lg-8 col-md-8 col-sm-8">
+                <div class="custom-control custom-checkbox">
+                  <input type="checkbox" class="custom-control-input" name="fll_pickup" id="fll_pickup">
+                  <label class="custom-control-label" for="fll_pickup">FLL Pickup </label>
+                </div>
+              </div>
+              </div>
+              <div class="form-group form-show-validation row ">
+                <div class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right"></div>
+                <div class="col-lg-8 col-md-8 col-sm-8">
+                <div class="custom-control custom-checkbox">
+                  <input type="checkbox" class="custom-control-input" name="invoicecheck" id="invoicecheck">
+                  <label class="custom-control-label" for="invoicecheck">Invoice </label>
+                </div>
+              </div>
+              </div>
               <div class="form-group form-show-validation row">
                 <label for="awbNotes" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">Notes</label>
                 <div class="col-lg-8 col-md-8 col-sm-8">
