--- a/views/pages/warehouse/awb/list.ejs
+++ b/views/pages/warehouse/awb/list.ejs
@@ -11,6 +11,8 @@
                 aria-selected="false">No Docs</a> </li>
             <li class="nav-item"> <a class="nav-link" data-toggle="tab" href="#awb-no-packages" role="tab"
                 aria-selected="false">Pending Awb</a> </li>
+            <li class="nav-item"> <a class="nav-link" data-toggle="tab" href="#awb-pickups" role="tab"
+                aria-selected="false">Awb Pickups</a> </li>
           </ul>
         </div>
       </div>
@@ -167,6 +169,60 @@
             </div>
           </div>
           <!-- End Pending Awbs -->
+          <!-- Pickups Awbs -->
+          <div class="tab-pane fade" id="awb-pickups" role="tabpanel" aria-labelledby="awb-pickups-tab">
+            <div class="table-responsive">
+                <table id='awb-table' class='display table table-striped table-hover dataTable'>
+                <thead>
+                  <tr>
+                    <th>Date Received</th>
+                    <th>PMB</th>
+                    <th>AWB Number</th>
+                    <th>Consignee</th>
+                    <th>Shipper</th>
+                    <th>Driver</th>
+                    <th>Carrier</th>
+                    <th>Pieces</th>
+                    <th>Weight</th>
+                    <!-- <th>Invoice</th> -->
+                    <th></th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <% awbs.forEach(function(awb){
+                    if(awb.fll_pickup) {
+                      %>
+                  <tr data-record="<%= awb._id %>">
+                    <td><%=awb.dateCreated%></td>
+                    <td><%=awb.customer.pmb %></td>
+                    <td><a href="manage/<%=awb._id%>/preview"><%=awb.awbId%></a></td>
+                    <td><%=helpers.getFullName(awb.customer)%></td>
+                    <td><%=awb.shipper.name %></td>
+                    <td><%=awb.driver ? awb.driver.firstName +' ' + awb.driver.lastName:''%></td>
+                    <td><%=awb.carrier.name %></td>
+                    <td><%=awb.packages.length %></td>
+                    <td><%=awb.weight %> lbs</td>
+                    <!-- <td><% if(awb.invoice) { %>
+                      <a class="btn btn-link btn-primary btn-invoice" data-id="<%=awb.invoice%>" data-toggle="tooltip"
+                        data-original-title="Invoice Attached"> <i class="fa fa-paperclip"></i> </a>
+                      <% } %>
+                    </td> -->
+                    <td class="text-center">
+                      <a href='manage/<%=awb._id%>/get' class="btn btn-link btn-primary px-1" data-toggle="tooltip"
+                        data-original-title="Edit"> <i class="fa fa-pen"></i> </a>
+                      <!-- temporary commenting the code -->  
+                      <!-- <a class="btn btn-link btn-danger btn-rm-awb p-1" data-toggle="modal" data-id="<%=awb._id%>"
+                        data-target="#confirm-delete-awb"> <i class="fa fa-trash"></i> </a> -->
+                      <a class="btn btn-link btn-primary btn-print-awb p-1" data-toggle="modal" data-id="<%=awb._id%>"
+                        data-target="#print-popup"> <i class="fa fa-print"></i> </a>
+                    </td>
+                  </tr>
+                  <%}})%>
+                </tbody>
+              </table>
+            </div>
+          </div>
+          <!-- End Pickups Awbs -->
         </div>
       </div>
     </div>
