--- a/views/pages/warehouse/manifest/preview.ejs
+++ b/views/pages/warehouse/manifest/preview.ejs
@@ -96,6 +96,7 @@
               <thead>
                 <tr>
                   <td><strong>Compartment</strong></td>
+                  <td><strong>AwbNo</strong></td>
                   <td><strong>Trackig No #</strong></td>
                   <td><strong>Description</strong></td>
                   <td><strong>Weight</strong></td>
@@ -105,9 +106,11 @@
               <tbody>
                 <% var totalWeight = 0;
                 packages.forEach(package => { 
+                  let isExpress = package.express ? 'bolder':'normal';
                   totalWeight += Number(package.weight);%>
-                <tr data-record="<%= package.id %>">
+                <tr data-record="<%= package.id %>" style="font-weight:<%=isExpress%>;">
                   <td><%= package.compartment && package.compartment.name %></td>
+                  <td><b><%= package.express ? '*':''%></b><%= package.awbId ? package.awbId.awbId:'' %></td>
                   <td><%= package.trackingNo %></td>
                   <td><%= package.description %></td>
                   <td><%= package.weight %> lbs</td>
