--- a/views/pages/warehouse/manifest/preview.ejs
+++ b/views/pages/warehouse/manifest/preview.ejs
@@ -97,9 +97,11 @@
                 <tr>
                   <td><strong>Compartment</strong></td>
                   <td><strong>Trackig No #</strong></td>
+                  <td><strong>Package Number #</strong></td>
                   <td><strong>Description</strong></td>
                   <td><strong>Weight</strong></td>
                   <td><strong>Dimension</strong></td>
+                  <td><strong>Number Of Pieces #</strong></td>
                 </tr>
               </thead>
               <tbody>
@@ -109,9 +111,11 @@
                 <tr data-record="<%= package.id %>">
                   <td><%= package.compartment && package.compartment.name %></td>
                   <td><%= package.trackingNo %></td>
+                  <td><%= package.packageNumber %></td>
                   <td><%= package.description %></td>
                   <td><%= package.weight %> lbs</td>
                   <td><%= package.dimensions %></td>
+                  <td><%= package.pieces %></td>
                 </tr>
                 <% }) %>
               </tbody>
